# gs_insurance

./: README.md  pyproject.toml
gs_insurance/: .sqlfluff  .user.yml  README.md  dbt_project.yml  dev.duckdb  profiles.yml
gs_insurance/macros/transactions/: fix_status.sql
gs_insurance/models/finance/enriched/: premium_transactions_enriched_ss.md  premium_transactions_enriched_ss.sql  schema.yml
gs_insurance/models/finance/mart/: processed_transactions_mart_ss.md  processed_transactions_mart_ss.sql  schema.yml
gs_insurance/models/finance/raw/: premium_transactions_raw_ss.md  premium_transactions_raw_ss.sql  schema.yml  sources.yml
